# hermes-seatalk

./: .gitignore  README.md  __init__.py  adapter.py  env.example  plugin.yaml  pyproject.toml
deploy/: capture-seatalk-webhook.py  cleanup-seatalk-plugin.sh  deploy-seatalk-plugin.sh
docs/spec/: td_hermes-seatalk-plugin_phase2_multi-account_zh.md  td_hermes-seatalk-plugin_zh.md  tdr_hermes-seatalk-plugin_phase2_multi-account-runtime_zh.md  wbs_hermes-seatalk-plugin_phase2_multi-account_zh.md  wbs_hermes-seatalk-plugin_zh.md
docs/test/: e2e_hermes-seatalk-plugin_runbook_zh.md  manual_hermes-seatalk-message-capability_cases_zh.md  tp_hermes-seatalk-plugin_phase2_multi-account_zh.md  tp_hermes-seatalk-plugin_zh.md  tr_hermes-seatalk-plugin_e2e_zh.md  tr_hermes-seatalk-plugin_phase2_multi-account_zh.md  tr_hermes-seatalk-plugin_zh.md
hermes_seatalk/: __init__.py  adapter.py  client.py  coalescer.py  dispatcher.py  probe.py  relay.py  targets.py  tools.py  webhook.py
scripts/: publish-release.sh
tests/: conftest.py  test_p2_config_accounts.py  test_p2_dispatcher_accounts.py  test_p2_outbound_accounts.py  test_p2_relay_accounts.py  test_p2_runtime_accounts.py  test_p2_setup_docs.py  test_p2_webhook_accounts.py  test_w00_plugin_skeleton.py  test_w01_registration.py  test_w02_openapi_client.py  test_w03_outbound_adapter.py  test_w04_webhook.py  test_w05_relay.py  test_w06_dispatcher.py  test_w07_authorization.py  test_w08_runtime_patch.py  test_w09_operations_docs.py  test_w10_test_quality.py  test_w11_seatalk_tools.py  test_w12_probe.py
(+4 files in other folders)
