[project]
name = "hermes-seatalk"
version = "1.0.0"
description = "SeaTalk platform plugin for Hermes Agent"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "requires_hermes: test requires a live Hermes installation (BasePlatformAdapter and gateway)",
]

